base functionalities done

--- a/QFun/QFun.csproj
+++ b/QFun/QFun.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Compile Remove="Data\Migrations\00000000000000_CreateIdentitySchema.cs" />
     <Compile Remove="Data\Migrations\00000000000000_CreateIdentitySchema.Designer.cs" />
+    <Compile Remove="Migrations\20200527133221_initial.cs" />
+    <Compile Remove="Migrations\20200527133221_initial.Designer.cs" />
   </ItemGroup>
 
 
