--- a/QFun/QFun.csproj
+++ b/QFun/QFun.csproj
@@ -20,6 +20,12 @@
     <Compile Remove="Migrations\20200529083031_initial.Designer.cs" />
     <Compile Remove="Migrations\20200529083402_initial.cs" />
     <Compile Remove="Migrations\20200529083402_initial.Designer.cs" />
+    <Compile Remove="Migrations\20200529132033_init.cs" />
+    <Compile Remove="Migrations\20200529132033_init.Designer.cs" />
+    <Compile Remove="Migrations\20200530153338_user-cont-test.cs" />
+    <Compile Remove="Migrations\20200530153338_user-cont-test.Designer.cs" />
+    <Compile Remove="Migrations\20200531162312_cont-test.cs" />
+    <Compile Remove="Migrations\20200531162312_cont-test.Designer.cs" />
   </ItemGroup>
 
 
